frontend:Move files and folders into the front-end folder

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moviy</title>
 
-    <!-- Icon -->
-    <link rel="icon" href="/icon.png" type="image/png" />
-
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -62,6 +59,6 @@
       <p>&copy; 2025 Moviy. All rights reserved.</p>
     </footer>
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
