fe: update icon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moviy</title>
 
+    <!-- icon -->
+    <link rel="icon" href="public/moviy.svg" type="icon" />
+
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
